voltar versao java

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,7 +15,8 @@
 	<name>dsmovie</name>
 	<description>Semana Spring React</description>
 	<properties>
-		<java.version>11</java.version>
+	<java.version>1.8</java.version>
+		<!-- *<java.version>11</java.version>*/ -->
 	</properties>
 	<dependencies>
 		<dependency>
